--- a/styles/_logo.scss
+++ b/styles/_logo.scss
@@ -1,6 +1,7 @@
 .logo {
-  margin: 0 0 20px;
+  margin: 0 0 40px;
   cursor: pointer;
+  display: inline-block;
   svg {
     position: relative;
     z-index: 100;
@@ -35,12 +36,4 @@
   80%{border-radius:55% 45% 37% 63% / 38% 30% 70% 62%}
   90%{border-radius:25% 75% 70% 30% / 39% 50% 50% 61%}
   100%{border-radius:66% 34% 33% 67% / 65% 73% 27% 35%}
-}
-
-.has-button {
-  .blob {
-    @media #{$desktop}{
-      top: 30px;
-    }
-  }
 }
